    * Added LOAD/UNLOAD filament commands
    * Added disable_steppers command to api/printer/printhead
    * Implementation of farm_mode into api/settings endpoints
    * New Upload errors
      - check Content-Length header
      - check if file is uploaded complete
      - check storage free space first
      - errors refactoring
      - simple html errors

0.5.1 (2021-07-16)
    * Implementation of print after upload endpoint
    * Minimal suported firmware is 3.10.0
    * Sort files directory first, newest first
    * Faster checking and processing when uploading gcode
    * Static web update
      - Upload gcode fixes
      - File browser is available when printer printes
      - Files are sort by printers API
      - Printed file widget rework
      - Fixed progress bar behaviour when printing is finished
      - Fixed error handling for periodic requests
      - Page heading is sticky now
      - Telemetry sidebar is sticky now
      - Added frontend version to the Settings page
      - Fixed 'undefined' error pop up heading in some cases
      - Log viewer
      - Login and password can be changed in settings
      - All not available project properties are hidden
      - Toaster messages are now sticky to window bottom
      - Fixed printing time estimations missmatching
      - Printer name and location can be changed in settings
      - Files with size above 100MB won't be loaded into textarea
    * React to thermal runaway by going into the error state
    * Use daemon type WSGI threads
    * Removed temporary gcode copy for printing
    * Support the new M20 attributes and their order
    * Fix progress equal to -1 not being supported
    * Fixed upload from local web
    * SEND_INFO hostname fixed
    * Fix SD Card file selection
    * Log HTTP requests and errors over Python Logger
    * Improve FW error message support
    * Work around print head returning to the print after Stop print
    * Added endpoint for download file from url